--- a/luffy-jtc/pom.xml
+++ b/luffy-jtc/pom.xml
@@ -101,7 +101,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
-            <version>1.7.25</version>
+            <version>${slf4j.version}</version>
         </dependency>
 
         <dependency>
