--- a/luffy.base/pom.xml
+++ b/luffy.base/pom.xml
@@ -35,7 +35,7 @@
 
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>solon.config.yaml</artifactId>
+            <artifactId>solon-config-yaml</artifactId>
             <scope>provided</scope>
         </dependency>
 
