--- a/luffy.test/pom.xml
+++ b/luffy.test/pom.xml
@@ -27,7 +27,7 @@
         </dependency>
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>solon.config.yaml</artifactId>
+            <artifactId>solon-config-yaml</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
