--- a/luffy-parent/pom.xml
+++ b/luffy-parent/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.noear</groupId>
         <artifactId>solon-parent</artifactId>
-        <version>2.9.2-M1</version>
+        <version>2.9.2</version>
         <relativePath />
     </parent>
 
@@ -21,7 +21,7 @@
     <url>https://github.com/noear/luffy</url>
 
     <properties>
-        <revision>1.8.0-M1</revision>
+        <revision>1.8.0</revision>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
